[package]
name = "fwd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1"
crossterm = { version = "0.25", features = ["event-stream"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

[target.'cfg(target_os="linux")'.dependencies]
procfs = "0.14.1"
