[package]
name = "fwd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1"
crossterm = { version = "0.25", features = ["event-stream"] }
home = "0.5.4"
log = { version = "0.4", features = ["std"] }
open = "3"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.5"

[target.'cfg(target_os="linux")'.dependencies]
procfs = "0.14.1"
