[package]
name = "fwd"
version = "0.9.1"
edition = "2021"
license = "MIT"
description = "Automatically forward ports to a remote server over ssh"
homepage = "https://github.com/DeCarabas/fwd"
repository = "https://github.com/DeCarabas/fwd"
readme = "README.md"

[[bin]]
name = "fwd-browse"
test = false
bench = false

[dependencies]
anyhow = "1.0"
bytes = "1"
copypasta = "0.10.1"
crossterm = { version = "0.25", features = ["event-stream"] }
env_logger = { version = "0.11.5", default-features = false }
home = "0.5.4"
indoc = "1"
log = { version = "0.4", features = ["std"] }
open = "3"
rand = "0.8.5"
thiserror = "1.0"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "process", "rt", "rt-multi-thread", "fs"] }
tokio-stream = "0.1"
toml = "0.5"
tui = "0.19"
xdg = "2"

[dev-dependencies]
assert_matches = "1"
pretty_assertions = "1"
tempdir = "0.3"

[target.'cfg(target_os="linux")'.dependencies]
procfs = "0.14.1"

[target.'cfg(target_family="unix")'.dependencies]
users = "0.11"
