[package]
name = "fwd-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.3.2", features = ["derive"] }
libfuzzer-sys = "0.4"
serde_json = "1.0.124"

[dependencies.fwd]
path = ".."

[[bin]]
name = "json_raw_input"
path = "fuzz_targets/json_raw_input.rs"
test = false
doc = false
bench = false

[[bin]]
name = "json_only_valid_serde"
path = "fuzz_targets/json_only_valid_serde.rs"
test = false
doc = false
bench = false
